# dnscrypt-wrapper

./: .gitignore  .gitmodules  .travis.yml  .travis_setup.sh  CHANGELOG.md  COPYING  DOCS  Makefile  README.cn.md  README.md  TODO  block.c  block.h  cert.c  cert.h  compat.h  config.mak.in  configure.ac  debug.c  debug.h  dns-protocol.h  dnscrypt-wrapper.c  dnscrypt-wrapper.h  dnscrypt.c  dnscrypt.h  dnscrypt_server.c  dnscrypt_server.h  edns.c  edns.h  format.sh  fpst.c  fpst.h  gen-version.sh  index.html  logger.c  logger.h  main.c  params.json  pidfile.c  pidfile.h  (+13 more)
debian/: changelog  control  default  dnscrypt-wrapper.8  dnscrypt-wrapper.default  dnscrypt-wrapper.dirs  dnscrypt-wrapper.init  dnscrypt-wrapper.manpages  dnscrypt-wrapper.postinst  dnscrypt-wrapper.preinst  dnscrypt-wrapper.service  preinst  rules
dnscrypt-proxy/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README-PLUGINS.markdown  README-WINDOWS.markdown  README.markdown  TECHNOTES  THANKS  autogen.sh  config.guess-bitrig.diff  configure.ac  org.dnscrypt.osx.DNSCryptProxy.plist
dnscrypt-proxy/dist-build/: Makefile.am  android.sh  iphone.sh  msys.sh  osx-32bit.sh  osx.sh
dnscrypt-proxy/man/: dnscrypt-proxy.8  dnscrypt-proxy.8.markdown  hostip.8  hostip.8.markdown
dnscrypt-proxy/src/: Makefile.am
dnscrypt-proxy/src/hostip/: Makefile.am  app.c  options.c
dnscrypt-proxy/src/include/dnscrypt/: plugin.h
dnscrypt-proxy/src/libevent/include/event2/: dns.h  util.h
dnscrypt-proxy/src/plugins/: Makefile.am  WARNING
dnscrypt-proxy/src/plugins/example-ldns-aaaa-blocking/: example-ldns-aaaa-blocking.c
dnscrypt-proxy/src/plugins/example-ldns-blocking/: Makefile.am  example-ldns-blocking.c
dnscrypt-proxy/src/plugins/example-ldns-forward-after-nxdomain/: Makefile.am  example-ldns-forward-after-nxdomain.c
dnscrypt-proxy/src/plugins/example-ldns-opendns-deviceid/: Makefile.am  example-ldns-opendns-deviceid.c
dnscrypt-proxy/src/plugins/example-logging/: example-logging.c
dnscrypt-proxy/src/proxy/: Makefile.am  app.c  app.h  cert.c  cert.h  cert_p.h  dnscrypt.c  dnscrypt.h  dnscrypt_client.c  dnscrypt_client.h  dnscrypt_proxy.h  edns.c  logger.c  logger.h  options.c  options.h  plugin_support.c  plugin_support.h  safe_rw.c  salsa20_random.c  stack_trace.c  tcp_request.c  tcp_request.h  udp_request.c  udp_request.h  udp_request_p.h  utils.c  utils.h  windows_service.c  windows_service.h
dnscrypt-proxy/test/: Gemfile  dist-files
dnscrypt-proxy/test/features/step_definitions/: dnscrypt-proxy.rb  opendnscache.rb
dnscrypt-proxy/test/features/test-dnscrypt-proxy/: forced_tcp.feature  small_udp_query.feature  tcp_fallback.feature
dnscrypt-proxy/test/features/test-hostip/: resolve-specific.feature  resolve.feature
docs/: releasing.md
example/: 1.cert  1.key  README.md  crypt_public.key  crypt_secret.key  dnscrypt.cert  public.key  secret.key  start_proxy.sh  start_wrapper.sh
hack/: Dockerfile.debian  entrypoint.sh  package.sh  setup-travis.sh
lib/: Makefile  cert.c  dnscrypt.h
libevent/: Makefile  Makefile.in  aclocal.m4  arc4random.c  buffer.c  bufferevent_openssl.c  config.h  config.status  configure  evdns.c  evthread_win32.c  evutil.c  evutil_rand.c  kqueue.c  libevent.pc  libevent_openssl.pc  libevent_pthreads.pc  libtool
libevent/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
libevent/include/: Makefile  Makefile.in
libevent/include/event2/: event-config.h
libevent/sample/: Makefile  Makefile.in
libevent/test/: Makefile  Makefile.in
libnacl/: Makefile
libnacl/okcompilers/: c  do
libnacl/tests/: Makefile
misc/: README  crypt_public.key  crypt_secret.key  dnscrypt.cert  public.key  secret.key
tests/: Gemfile  Makefile  README.md  dnscrypt-fuzzer.py
tests/features/cert-distribution/: txt_records.feature
tests/features/cert-generation/: generate_certs.feature
tests/features/step_definitions/: dnscrypt-wrapper-cert.rb  dnscrypt-wrapper.rb
tests/keys2/: 1.xchacha20.cert  2.key
